[gd_scene load_steps=15 format=2]

[ext_resource path="res://scenes_and_scripts/screen__practice_game/game.gd" type="Script" id=1]
[ext_resource path="res://assets/themes/fonts/scoreBar_dynamicfont.tres" type="DynamicFont" id=2]
[ext_resource path="res://scenes_and_scripts/screen__practice_game/option.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes_and_scripts/gl_obj__go_to_main_menu_btn/back_to_menu_button.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/themes/newthemed.tres" type="Theme" id=5]
[ext_resource path="res://scenes_and_scripts/screen__practice_game/circular_count_down/circular_count_down.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes_and_scripts/screen__practice_game/visual_effects/game_anim_rect.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes_and_scripts/screen__practice_game/lastest_tries_bar/lastest_tries_container.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes_and_scripts/screen__practice_game/scene_assets/question_container.png" type="Texture" id=9]
[ext_resource path="res://scenes_and_scripts/screen__practice_game/scene_assets/game_scene_example.png" type="Texture" id=10]
[ext_resource path="res://scenes_and_scripts/screen__practice_game/scene_assets/question_text.png" type="Texture" id=11]
[ext_resource path="res://scenes_and_scripts/screen__practice_game/scene_assets/translucent_external_container.png" type="Texture" id=12]
[ext_resource path="res://scenes_and_scripts/screen__practice_game/scene_assets/hud_container.png" type="Texture" id=13]
[ext_resource path="res://scenes_and_scripts/gl_obj__go_to_main_menu_btn/home_btn.tscn" type="PackedScene" id=14]

[node name="Game" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VisualExample" type="TextureRect" parent="."]
margin_left = 392.0
margin_right = 772.0
margin_bottom = 640.0
rect_min_size = Vector2( 320, 16 )
texture = ExtResource( 10 )
expand = true
stretch_mode = 5

[node name="TranslucentContainer" type="TextureRect" parent="."]
margin_left = 16.0
margin_top = 16.0
margin_right = 344.0
margin_bottom = 628.0
rect_min_size = Vector2( 320, 595 )
texture = ExtResource( 12 )
expand = true
stretch_mode = 1

[node name="GameAnimRect" parent="." instance=ExtResource( 7 )]
margin_right = 360.0
margin_bottom = 641.0

[node name="ExternalVBoxContainer" type="Control" parent="."]
margin_right = 380.0
margin_bottom = 641.0
rect_min_size = Vector2( 360, 640 )
theme = ExtResource( 5 )

[node name="HUDContainer" type="Control" parent="ExternalVBoxContainer"]
margin_top = 72.0
margin_right = 380.0
margin_bottom = 72.0
size_flags_vertical = 0

[node name="BackgroundSprite" type="Sprite" parent="ExternalVBoxContainer/HUDContainer"]
position = Vector2( 168, 32 )
scale = Vector2( 0.330249, 0.337679 )
texture = ExtResource( 13 )

[node name="QuestionTimer" parent="ExternalVBoxContainer/HUDContainer" instance=ExtResource( 6 )]
margin_left = 25.0
margin_top = -36.0
margin_right = 35.0
margin_bottom = 36.0

[node name="CircularProgressBar" parent="ExternalVBoxContainer/HUDContainer/QuestionTimer" index="0"]
margin_left = 7.0
margin_top = 16.0
margin_right = 77.0
margin_bottom = 86.0

[node name="BackgroundRect" parent="ExternalVBoxContainer/HUDContainer/QuestionTimer/CircularProgressBar" index="0"]
margin_bottom = 68.0
rect_min_size = Vector2( 50, 50 )

[node name="TextureProgress" parent="ExternalVBoxContainer/HUDContainer/QuestionTimer/CircularProgressBar" index="1"]
margin_right = 56.0
margin_bottom = 56.0
rect_min_size = Vector2( 30, 30 )

[node name="VBoxContainer" type="VBoxContainer" parent="ExternalVBoxContainer/HUDContainer"]
margin_left = 152.0
margin_top = -24.0
margin_right = 332.0
margin_bottom = 48.0

[node name="ScoreBar" type="ProgressBar" parent="ExternalVBoxContainer/HUDContainer/VBoxContainer"]
margin_right = 180.0
margin_bottom = 33.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )

[node name="Last20TriesContainer" parent="ExternalVBoxContainer/HUDContainer/VBoxContainer" instance=ExtResource( 8 )]
margin_top = 37.0
margin_bottom = 72.0

[node name="QuestionContainer" type="Control" parent="ExternalVBoxContainer"]
margin_top = 142.0
margin_right = 380.0
margin_bottom = 142.0

[node name="BackgroundRect" type="TextureRect" parent="ExternalVBoxContainer/QuestionContainer"]
margin_left = 36.0
margin_top = 44.0
margin_right = 332.0
margin_bottom = 108.0
rect_min_size = Vector2( 296, 64 )
texture = ExtResource( 9 )
expand = true
stretch_mode = 5

[node name="QuestionRect" type="TextureRect" parent="ExternalVBoxContainer/QuestionContainer"]
margin_left = 62.0
margin_top = 63.0
margin_right = 213.0
margin_bottom = 87.0
rect_min_size = Vector2( 144, 16 )
texture = ExtResource( 11 )
expand = true
stretch_mode = 5

[node name="Question" type="Label" parent="ExternalVBoxContainer/QuestionContainer"]
margin_left = 192.0
margin_top = 46.0
margin_right = 312.0
margin_bottom = 102.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 2 )
text = " X * Y"
align = 1
valign = 1

[node name="Options" type="MarginContainer" parent="ExternalVBoxContainer"]
margin_left = 55.0
margin_top = 265.0
margin_right = 315.0
margin_bottom = 525.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="HBox" type="HBoxContainer" parent="ExternalVBoxContainer/Options"]
margin_right = 260.0
margin_bottom = 260.0
custom_constants/separation = 20

[node name="VBox1" type="VBoxContainer" parent="ExternalVBoxContainer/Options/HBox"]
margin_right = 120.0
margin_bottom = 260.0
custom_constants/separation = 20

[node name="op1" parent="ExternalVBoxContainer/Options/HBox/VBox1" instance=ExtResource( 3 )]
expand = true

[node name="Label" parent="ExternalVBoxContainer/Options/HBox/VBox1/op1" index="0"]
margin_left = 39.0
margin_top = 39.0
margin_right = 79.0
margin_bottom = 80.0

[node name="op2" parent="ExternalVBoxContainer/Options/HBox/VBox1" instance=ExtResource( 3 )]
margin_top = 140.0
margin_bottom = 260.0
expand = true

[node name="Label" parent="ExternalVBoxContainer/Options/HBox/VBox1/op2" index="0"]
margin_left = 39.0
margin_top = 37.0
margin_right = 79.0
margin_bottom = 78.0

[node name="VBox2" type="VBoxContainer" parent="ExternalVBoxContainer/Options/HBox"]
margin_left = 140.0
margin_right = 260.0
margin_bottom = 260.0
custom_constants/separation = 20

[node name="op3" parent="ExternalVBoxContainer/Options/HBox/VBox2" instance=ExtResource( 3 )]
expand = true

[node name="Label" parent="ExternalVBoxContainer/Options/HBox/VBox2/op3" index="0"]
margin_left = 38.0
margin_top = 39.0
margin_right = 78.0
margin_bottom = 80.0

[node name="op4" parent="ExternalVBoxContainer/Options/HBox/VBox2" instance=ExtResource( 3 )]
margin_top = 140.0
margin_bottom = 260.0
expand = true

[node name="Label" parent="ExternalVBoxContainer/Options/HBox/VBox2/op4" index="0"]
margin_left = 38.0
margin_top = 38.0
margin_right = 78.0
margin_bottom = 79.0

[node name="Button" parent="ExternalVBoxContainer" instance=ExtResource( 4 )]
margin_top = 542.0
margin_right = 380.0
margin_bottom = 568.0

[node name="BottomMenuRect" parent="ExternalVBoxContainer" instance=ExtResource( 14 )]
margin_left = 80.0
margin_top = 568.0
margin_right = 296.0
margin_bottom = 628.0

[node name="GameSoundEffects" type="AudioStreamPlayer" parent="ExternalVBoxContainer"]
pause_mode = 1

[editable path="ExternalVBoxContainer/HUDContainer/QuestionTimer"]
[editable path="ExternalVBoxContainer/HUDContainer/QuestionTimer/CircularProgressBar"]
[editable path="ExternalVBoxContainer/Options/HBox/VBox1/op1"]
[editable path="ExternalVBoxContainer/Options/HBox/VBox1/op2"]
[editable path="ExternalVBoxContainer/Options/HBox/VBox2/op3"]
[editable path="ExternalVBoxContainer/Options/HBox/VBox2/op4"]
